<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="4dp" >

	<TextView
		android:id="@+id/tvEventTitle"
		style="@style/tvStyleSmokewhite"
		android:layout_width="match_parent"
		android:layout_height="52dp" >
	</TextView>

	<Button
		android:id="@+id/btnCreateEvent"
		style="@style/btnStyleGenoa"
		android:layout_width="match_parent"
		android:layout_height="52dp"
		android:gravity="center"
		android:text="@string/btnCreateEvent_text" >
	</Button>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1" >

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" >

			<CheckBox
				android:id="@+id/ckIsRelay"
				android:layout_width="wrap_content"
				android:layout_height="52dp"
				android:layout_marginLeft="52dp"
				android:text="@string/event_is_a_relay_text" />

			<EditText
				android:id="@+id/txtDistance"
				android:layout_width="match_parent"
				android:layout_height="52dp"
				android:layout_marginLeft="52dp"
				android:layout_marginRight="52dp"
				android:hint="@string/event_distance_hint"
				android:inputType="number" />

			<Spinner
				android:id="@+id/spinUnits"
				android:layout_width="match_parent"
				android:layout_height="52dp"
				android:layout_marginLeft="52dp"
				android:layout_marginRight="52dp" />

			<EditText
				android:id="@+id/txtStyle"
				android:layout_width="match_parent"
				android:layout_height="52dp"
				android:layout_marginLeft="52dp"
				android:layout_marginRight="52dp"
				android:hint="@string/event_style_hint"
				android:inputType="textCapWords" />

			<EditText
				android:id="@+id/txtLapDistance"
				android:layout_width="match_parent"
				android:layout_height="52dp"
				android:layout_gravity="center_vertical"
				android:layout_marginLeft="52dp"
				android:layout_marginRight="52dp"
				android:hint="@string/lap_distance_hint"
				android:inputType="number" />
		</LinearLayout>
	</ScrollView>

	<Button
		android:id="@+id/btnOkFinished"
		style="@style/btnStyleStart"
		android:layout_width="match_parent"
		android:layout_height="52dp"
		android:text="@string/btnOK_text" />

</LinearLayout>