<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/llBestTimeHeader"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:gravity="left"
	android:orientation="horizontal"
	android:padding="1dp" >

	<TextView
		style="@style/tvStyleBTResultsHeader"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="32"
		android:singleLine="true"
		android:text="@string/event_text" />

	<TextView
		style="@style/tvStyleBTResultsHeader"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="16"
		android:singleLine="true"
		android:text="@string/time_text" />

	<TextView
		style="@style/tvStyleBTResultsHeader"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="24"
		android:singleLine="true"
		android:text="@string/date_text" />

</LinearLayout>