<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingBottom="@dimen/fragment_vertical_padding"
	android:paddingLeft="@dimen/fragment_horizontal_padding"
	android:paddingRight="@dimen/fragment_horizontal_padding"
	android:paddingTop="@dimen/fragment_vertical_padding" >

	<EditText
		android:id="@+id/txtMeetTitle"
		style="@style/txtStyleLinen"
		android:layout_width="match_parent"
		android:layout_height="@dimen/spinnerHeight"
		android:hint="@string/meet_title_hint"
		android:inputType="textAutoCorrect|textCapWords" />

	<Button
		android:id="@+id/btnCreateMeetTitle"
		style="@style/btnStyle.Genoa"
		android:layout_width="match_parent"
		android:layout_height="@dimen/spinnerHeight"
		android:gravity="center"
		android:text="@string/btnCreateMeetTitle_add_meet_text" >
	</Button>

	<ListView
		android:id="@+id/lvMeetTitles"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1" >
	</ListView>

	<Button
		android:id="@+id/btnOkFinished"
		style="@style/btnStyle.OkFinished"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/btnOK_Return_text" />

</LinearLayout>