<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/llAthlete2RaceTable"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<Spinner
		android:id="@+id/spinAthlete2"
		android:layout_width="match_parent"
		android:layout_height="52dp" />

	<TextView
		android:id="@+id/tvAthlete2BestTime"
		style="@style/tvStyleTitle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="left|center_vertical"
		android:text="Athlete2 Event Best Time"
		android:visibility="visible" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal" >

		<Button
			android:id="@+id/btnAthlete2Start"
			style="@style/btnStartSplitStop.Start"
			android:layout_width="104dp"
			android:layout_height="104dp"
			android:gravity="center"
			android:text="@string/btnStart_text"
			android:visibility="visible" />

		<Button
			android:id="@+id/btnAthlete2Stop"
			style="@style/btnStartSplitStop.Stop"
			android:layout_width="104dp"
			android:layout_height="104dp"
			android:gravity="center"
			android:text="@string/btnStop_text"
			android:visibility="gone" />

		<Button
			android:id="@+id/btnAthlete2Split"
			style="@style/btnStartSplitStop.Split"
			android:layout_width="104dp"
			android:layout_height="104dp"
			android:gravity="center"
			android:text="@string/btnSplit_text"
			android:visibility="gone" />

		<RelativeLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1" >

			<include layout="@layout/row_race_split_times_header" />

			<ListView
				android:id="@+id/lvAthlete2RaceSplits"
				android:layout_width="match_parent"
				android:layout_height="140dp"
				android:layout_below="@id/tblSplitTimesHheader" >
			</ListView>
		</RelativeLayout>
	</LinearLayout>

</LinearLayout>