<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/llRelayTable"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical" >

	<Spinner
		android:id="@+id/spinAthlete0"
		android:layout_width="match_parent"
		android:layout_height="52dp" />

	<Spinner
		android:id="@+id/spinAthlete1"
		android:layout_width="match_parent"
		android:layout_height="52dp" />

	<Spinner
		android:id="@+id/spinAthlete2"
		android:layout_width="match_parent"
		android:layout_height="52dp" />

	<Spinner
		android:id="@+id/spinAthlete3"
		android:layout_width="match_parent"
		android:layout_height="52dp" />

	<Button
		android:id="@+id/btnActiveAthlete"
		style="@style/btnStyleSplit"
		android:layout_width="match_parent"
		android:layout_height="104dp"
		android:layout_marginBottom="10dp"
		android:layout_marginTop="10dp"
		android:visibility="gone" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="vertical" >

			<include layout="@layout/row_race_split_times_header" />

			<ListView
				android:id="@+id/lvRaceSplits"
				android:layout_width="match_parent"
				android:layout_height="83dp" >
			</ListView>
		</LinearLayout>

		<Button
			android:id="@+id/btnStart"
			style="@style/btnStyleStart"
			android:layout_width="104dp"
			android:layout_height="104dp"
			android:gravity="center"
			android:text="@string/btnStart_text"
			android:visibility="visible" />

		<Button
			android:id="@+id/btnStop"
			style="@style/btnStyleStop"
			android:layout_width="104dp"
			android:layout_height="104dp"
			android:gravity="center"
			android:text="@string/btnStop_text"
			android:visibility="gone" />

		<Button
			android:id="@+id/btnSplit"
			style="@style/btnStyleSplit"
			android:layout_width="104dp"
			android:layout_height="104dp"
			android:gravity="center"
			android:text="@string/btnSplit_text"
			android:visibility="gone" />
	</LinearLayout>

</LinearLayout>